[package]
name = "frakegps"
version = "0.2.1"
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
edition = "2021"
description = "Simulate a simple GPS device with gpsd or geoclue2"
repository = "https://github.com/frafra/frakegps"
readme = "README.md"
license = "GPL-3.0-or-later"

[badges]
travis-ci = { repository = "frafra/frakegps", branch = "master" }

[dependencies]
time = { version = "0.3", features = ["macros", "formatting"] }
wry = "0.32.0"
